@@ -1,5 +1,6 @@
 [Webhost]
 ControlPort=6352
+NetworkInterface=eth0
 NtpConfigurationFile=/etc/ntp.conf
 NtpServiceName=ntp
 ServiceCommand=/usr/bin/wtd
